--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -36,6 +36,42 @@
 //$solar-cyan:      #2aa198;
 //$solar-green:     #859900;
 
+$base03:          #272822; 
+$base02:          #272822; 
+$base01:          #586e75;
+$base0:           #839496; 
+$base1:           #93a1a1; 
+$base2:           #eee8d5; 
+$base3:           #fdf6e3; 
+$solar-yellow:    #f92672;
+$solar-orange:    #cb4b16;
+$solar-red:       #fff;
+$solar-magenta:   #d33682;
+$solar-violet:    #6c71c4;
+$solar-blue:      #268bd2;
+$solar-cyan:      #e6db74;
+$solar-green:     #859900;
+// Custom
+$number:          #AE81FF;
+$err:             #960050;
+$err_bg:          #1e0010;
+$comment:         #75715e; 
+$constant:        #AE81FF;
+$keyword:         #FF2571;
+$operator:        #FF2571;
+$punctuation:     #fff;
+$name:            #fff;
+$name_attribute:  #66d4e6;
+$name_class:      #fff;
+$name_constant:   #66d9ef;
+$name_exception:  #a2e22e;
+$name_function:   #a2e22e;
+$name_other:      #fff;
+$name_tag:        #f92672;
+$string:          #e6db74;
+$string_escape:   #ae81ff;
+$js_keyword:	  #66D4E6;
+
 
 /* Non highlighted code colors */
 //$pre-bg: $base03;
