--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -93,7 +93,89 @@ p, li {
   pre code { font-size: 1em !important; background: none; border: none; }
 }
 
-.pre-code {
+.pre-code .gist-syntax {
+  @include selection(adjust-color($base03, $lightness: 23%, $saturation: -65%), $text-shadow: $base03 0 1px);
+  font-family: $mono !important;
+  overflow: scroll;
+  overflow-y: hidden;
+  display: block;
+  padding: .8em !important;
+  overflow-x: auto;
+  line-height: 1.45em;
+  background: $base03 $noise-bg !important;
+  color: $base1 !important;
+  span { color: $base1 !important; }
+  span { font-style: normal !important; font-weight: normal !important; }
+
+  .c      { color: $comment !important; font-style: italic !important; }                     /* Comment */
+  .cm     { color: $comment !important; font-style: italic !important; }                     /* Comment.Multiline */
+  .cp     { color: $comment !important; font-style: italic !important;  }                     /* Comment.Preproc */
+  .c1     { color: $comment !important; font-style: italic !important; }                     /* Comment.Single */
+  .cs     { color: $comment !important; font-weight: bold !important; font-style: italic !important; }   /* Comment.Special */
+
+  .err    { color: $err !important; background: $err_bg !important; }                                            /* Error */
+  .k      { color: $keyword !important; }                       /* Keyword */
+
+  .o      { color: $operator !important; font-weight: bold !important; }                       /* Operaitor */
+  .p      { color: $punctuation !important; }                                             /* Operator */
+  .ow     { color: $solar-cyan !important; font-weight: bold !important; }                       /* Operator.Word */
+  .gd     { color: $base1 !important; background-color: mix($solar-red, $base03, 25%) !important; display: inline-block; }               /* Generic.Deleted */
+  .gd .x  { color: $base1 !important; background-color: mix($solar-red, $base03, 35%) !important; display: inline-block; }               /* Generic.Deleted.Specific */
+  .ge     { color: $base1 !important; font-style: italic !important; }                      /* Generic.Emph */
+  //.gr     { color: #aa0000 }                                          /* Generic.Error */
+  .gh     { color: $base01 !important; }                                          /* Generic.Heading */
+  .gi     { color: $base1 !important; background-color: mix($solar-green, $base03, 20%) !important; display: inline-block; }               /* Generic.Inserted */
+  .gi .x  { color: $base1 !important; background-color: mix($solar-green, $base03, 40%) !important; display: inline-block; }               /* Generic.Inserted.Specific */
+  //.go     { color: #888888 }                                          /* Generic.Output */
+  //.gp     { color: #555555 }                                          /* Generic.Prompt */
+  .gs     { color: $base1 !important; font-weight: bold !important; }                                       /* Generic.Strong */
+  .gu     { color: $solar-violet !important; }                                          /* Generic.Subheading */
+  //.gt     { color: #aa0000 }                                          /* Generic.Traceback */
+  .kc     { color: $constant !important; font-weight: bold !important; }                       /* Keyword.Constant */
+  .kd     { color: $js_keyword !important; }                       /* Keyword.Declaration */
+  .kp     { color: $solar-orange !important; font-weight: bold !important; }                       /* Keyword.Pseudo */
+  .kr     { color: $solar-magenta !important; font-weight: bold !important; }                       /* Keyword.Reserved */
+  .kt     { color: $name_attribute !important; }                       /* Keyword.Type */
+  .n      { color: $name !important; }
+  .na     { color: $name_attribute !important; }                                          /* Name.Attribute */
+  .nb     { color: $name_attribute !important; }                                          /* Name.Builtin */
+  .nc     { color: $name_class !important;}                                                   /* Name.Class */
+  .no     { color: $name_constant !important; }                                          /* Name.Constant */
+  //.ni     { color: #800080 }                                          /* Name.Entity */
+  .nl     { color: $solar-green !important; }
+  .ne     { color: $name_exception !important; font-weight: bold !important; }                       /* Name.Exception */
+  .nf     { color: $name_function !important; font-weight: bold !important; }                       /* Name.Function */
+  .nn     { color: $solar-yellow !important; }                                          /* Name.Namespace */
+  .nt     { color: $name_tag !important; font-weight: bold !important; }                                          /* Name.Tag */
+  .nx     { color: $name_other !Important; }
+  //.bp     { color: #999999 }                                          /* Name.Builtin.Pseudo */
+  //.vc     { color: #008080 }                                          /* Name.Variable.Class */
+  .vg     { color: $solar-blue !important; }                                          /* Name.Variable.Global */
+  .vi     { color: $solar-blue !important; }                                          /* Name.Variable.Instance */
+  .nv     { color: $name !important; }                                          /* Name.Variable */
+  //.w      { color: #bbbbbb }                                          /* Text.Whitespace */
+  .mf     { color: $number !important; }                                          /* Literal.Number.Float */
+  .m      { color: $number !important; }                                          /* Literal.Number */
+  .mh     { color: $number !important; }                                          /* Literal.Number.Hex */
+  .mi     { color: $number !important; }                                          /* Literal.Number.Integer */
+  //.mo     { color: #009999 }                                          /* Literal.Number.Oct */
+  .s      { color: $string !important; }                                             /* Literal.String */
+  //.sb     { color: #d14 }                                             /* Literal.String.Backtick */
+  //.sc     { color: #d14 }                                             /* Literal.String.Char */
+  .sd     { color: $solar-cyan !important; }                                             /* Literal.String.Doc */
+  .s2     { color: $solar-cyan !important; }                                             /* Literal.String.Double */
+  .se     { color: $string_escape !important; }                                             /* Literal.String.Escape */
+  //.sh     { color: #d14 }                                             /* Literal.String.Heredoc */
+  .si     { color: $solar-blue !important; }                                             /* Literal.String.Interpol */
+  //.sx     { color: #d14 }                                             /* Literal.String.Other */
+  .sr     { color: $solar-cyan !important; }                                          /* Literal.String.Regex */
+  .s1     { color: $solar-cyan !important; }                                             /* Literal.String.Single */
+  //.ss     { color: #990073 }                                          /* Literal.String.Symbol */
+  //.il     { color: #009999 }                                          /* Literal.Number.Integer.Long */
+  div { .gd, .gd .x, .gi, .gi .x { display: inline-block; width: 100%; }}
+}
+
+.gist-syntax {
   @include selection(adjust-color($base03, $lightness: 23%, $saturation: -65%), $text-shadow: $base03 0 1px);
   font-family: $mono !important;
   overflow: scroll;
