--- a/sass/partials/_syntax.scss
+++ b/sass/partials/_syntax.scss
@@ -108,8 +108,8 @@ p, li {
   overflow-x: auto;
   line-height: 1.45em;
   background: $base03 $noise-bg !important;
-  color: $base1 !important;
-  span { color: $base1 !important; }
+  // color: $base1 !important;
+  // span { color: $base1 !important; }
   span { font-style: normal !important; font-weight: normal !important; }
 
   .c      { color: $comment !important; font-style: italic !important; }                     /* Comment */
@@ -190,8 +190,8 @@ p, li {
   overflow-x: auto;
   line-height: 1.45em;
   background: $base03 $noise-bg !important;
-  color: $base1 !important;
-  span { color: $base1 !important; }
+  // color: $base1 !important;
+  // span { color: $base1 !important; }
   span { font-style: normal !important; font-weight: normal !important; }
 
   .c      { color: $comment !important; font-style: italic !important; }                     /* Comment */
@@ -325,4 +325,224 @@ figure.code {
 
 .line-number {
   display: block;
+}
+
+/*! Monokai */
+.highlight, .ace_editor {
+  background-color: #272822 !important;
+  color: #F8F8F2 !important;
+}
+
+.pl-c            { color: #75715E !important; font-style: italic !important; } /* comment */
+.pl-c1           { color: #ae81ff !important; } /* constant */
+.pl-cce          { color: #66D9EF !important; } /* constant.character.escape */
+.pl-cn           { color: #66D9EF !important; } /* constant.numeric */
+.pl-coc          { color: #66D9EF !important; } /* constant.other.color */
+.pl-cos          { color: #E6DB74 !important; } /* constant.other.symbol */
+.pl-e            { color: #A6E22E !important; } /* entity */
+.pl-ef           { color: #A6E22E !important; } /* entity.function */
+.pl-en           { color: #A6E22E !important; } /* entity.name */
+.pl-enc          { color: #66D9EF !important; } /* entity.name.class */
+.pl-enf          { color: #A6E22E !important; } /* entity.name.function */
+.pl-enm          { color: #A6E22E !important; } /* entity.name.method-name */
+.pl-ens          { color: #66D9EF !important; } /* entity.name.section */
+.pl-ent          { color: #F92672 !important; } /* entity.name.tag */
+.pl-entc         { color: #A6E22E !important; } /* entity.name.type.class */
+.pl-enti         { color: #A6E22E !important; font-weight: bold !important; } /* entity.name.type.instance */
+.pl-entm         { color: #A6E22E !important; } /* entity.name.type.module */
+.pl-eoa          { color: #F92672 !important; } /* entity.other.attribute-name */
+.pl-eoac         { color: #A6E22E !important; } /* entity.other.attribute-name.class */
+.pl-eoac .pl-pde { color: #A6E22E !important; } /* punctuation.definition.entity */
+.pl-eoai         { color: #F92672 !important; } /* entity.other.attribute-name.id */
+.pl-eoai .pl-pde { color: #F92672 !important; } /* punctuation.definition.entity */
+.pl-eoi          { color: #A6E22E !important; } /* entity.other.inherited-class */
+.pl-k            { color: #66d9ef !important; } /* keyword */
+.pl-ko           { color: #F92672 !important; } /* keyword.operator */
+.pl-kolp         { color: #F92672 !important; } /* keyword.operator.logical.python */
+.pl-kos          { color: #66D9EF !important; } /* keyword.other.special-method */
+.pl-kou          { color: #66D9EF !important; } /* keyword.other.unit */
+.pl-mai .pl-sf   { color: #A6E22E !important; } /* support.function */
+.pl-mb           { color: #E6DB74 !important; font-weight: bold !important; } /* markup.bold */
+.pl-mc           { color: #F92672 !important; } /* markup.changed */
+.pl-mh .pl-pdh   { color: #66D9EF !important; } /* markup.heading punctuation.definition.heading */
+.pl-mi           { color: #F92672 !important; font-style: italic !important; } /* markup.italic */
+.pl-ml           { color: #E6DB74 !important; } /* markup.list */
+.pl-mm           { color: #A6E22E !important; } /* meta.module-reference */
+.pl-mp           { color: #66D9EF !important; } /* meta.property-name */
+.pl-mp1 .pl-sf   { color: #66D9EF !important; } /* meta.property-value support.function */
+.pl-mq           { color: #66D9EF !important; } /* markup.quote */
+.pl-mr           { color: #F92672 !important; } /* meta.require */
+.pl-ms           { color: #F92672 !important; } /* meta.selector */
+.pl-pdb          { color: #E6DB74 !important; font-weight: bold !important; } /* punctuation.definition.bold */
+.pl-pdc          { color: #75715E !important; font-style: italic !important; } /* punctuation.definition.comment */
+.pl-pdc1         { color: #AE81FF !important; } /* punctuation.definition.constant */
+.pl-pde          { color: #66D9EF !important; } /* punctuation.definition.entity */
+.pl-pdi          { color: #F92672 !important; font-style: italic !important; } /* punctuation.definition.italic */
+.pl-pds          { color: #E6DB74 !important; } /* punctuation.definition.string */
+.pl-pdv          { color: #A6E22E !important; } /* punctuation.definition.variable */
+.pl-pse          { color: #66D9EF !important; } /* punctuation.section.embedded */
+.pl-pse .pl-s2   { color: #66D9EF !important; } /* punctuation.section.embedded source */
+.pl-s            { color: #66d9ef !important; } /* storage */
+.pl-s1           { color: #E6DB74 !important; } /* string */
+.pl-s2           { color: #F8F8F2 !important; } /* source */
+.pl-mp .pl-s3    { color: #66D9EF !important; } /* support */
+.pl-s3           { color: #F92672 !important; } /* support */
+.pl-sc           { color: #FD971F !important; } /* support.class */
+.pl-scp          { color: #AE81FF !important; } /* support.constant.property-value */
+.pl-sf           { color: #FD971F !important; } /* support.function */
+.pl-smc          { color: #A6E22E !important; } /* storage.modifier.c */
+.pl-smi          { color: #FD971F !important; } /* storage.modifier.import */
+.pl-smp          { color: #FD971F !important; } /* storage.modifier.package */
+.pl-sok          { color: #F92672 !important; } /* support.other.keyword */
+.pl-sol          { color: #E6DB74 !important; } /* string.other.link */
+.pl-som          { color: #A6E22E !important; } /* support.other.module */
+.pl-sr           { color: #A6E22E !important; } /* string.regexp */
+.pl-sra          { color: #F92672 !important; } /* string.regexp string.regexp.arbitrary-repitition */
+.pl-src          { color: #F92672 !important; } /* string.regexp.character-class */
+.pl-sre          { color: #F92672 !important; } /* string.regexp source.ruby.embedded */
+.pl-st           { color: #66d9ef !important; } /* support.type */
+.pl-stj          { color: #F8F8F2 !important; } /* storage.type.java */
+.pl-stp          { color: #66D9EF !important; } /* support.type.property-name */
+.pl-sv           { color: #66D9EF !important; } /* support.variable */
+.pl-v            { color: #66D9EF !important; } /* variable */
+.pl-vi           { color: #66D9EF !important; } /* variable.interpolation */
+.pl-vo           { color: #A6E22E !important; } /* variable.other */
+.pl-vpf          { color: #66D9EF !important; } /* variable.parameter.function */
+/* Diff - Example: https://gist.github.com/silverwind/904159f1e71e2e626375 */
+.pl-mi1          { color: #A6E22E !important; background: rgba(0,64,0,.5) !important; } /* markup.inserted */
+.pl-mdht         { color: #A6E22E !important; background: rgba(0,64,0,.5) !important; } /* meta.diff.header.to-file */
+.pl-md           { color: #f92672 !important; background: rgba(64,0,0,.5) !important; } /* markup.deleted */
+.pl-mdhf         { color: #f92672 !important; background: rgba(64,0,0,.5) !important; } /* meta.diff.header.from-file */
+.pl-mdr          { color: #66D9EF !important; font-weight: normal !important;} /* meta.diff.range */
+.pl-mdh          { color: #A6E22E !important; font-weight: normal !important;} /* meta.diff.header */
+.pl-mdi          { color: #A6E22E !important; font-weight: normal !important;} /* meta.diff.index */
+/* TODO: Fix unstyled classes below */
+.pl-ib           { background-color: #A6E22E !important; } /* invalid.broken */
+.pl-id           { background-color: #A6E22E !important; color: #fff !important; } /* invalid.deprecated */
+.pl-ii           { background-color: #A6E22E !important; color: #fff !important; } /* invalid.illegal */
+.pl-iu           { background-color: #A6E22E !important; } /* invalid.unimplemented */
+.pl-mo           { color: #FD971F !important; } /* meta.output */
+.pl-mri          { color: #66D9EF !important; } /* markup.raw.inline */
+.pl-ms1          { background-color: #FD971F !important; } /* meta.separator */
+.pl-va           { color: #66D9EF !important; } /* variable.assignment */
+.pl-vpu          { color: #66D9EF !important; } /* variable.parameter.url */
+.pl-entl         { color: #FD971F !important; } /* entity.name.tag.label */
+
+/* monokai */
+.ace_editor .ace_gutter {
+  background: #2F3129 !important;
+  color: #8F908A !important;
+}
+
+.ace_editor .ace_print-margin {
+  width: 1px !important;
+  background: #555651 !important;
+}
+
+.ace_editor .ace_cursor {
+  color: #F8F8F0 !important;
+}
+
+.ace_editor .ace_marker-layer .ace_selection {
+  background: #49483E !important;
+}
+
+.ace_editor.ace_multiselect .ace_selection.ace_start {
+  box-shadow: 0 0 3px 0px #272822 !important;
+  border-radius: 2px !important;
+}
+
+.ace_editor .ace_marker-layer .ace_step {
+  background: rgb(102, 82, 0) !important;
+}
+
+.ace_editor .ace_marker-layer .ace_bracket {
+  margin: -1px 0 0 -1px !important;
+  border: 1px solid #49483E !important;
+}
+
+.ace_editor .ace_marker-layer .ace_active-line {
+  background: #202020 !important;
+}
+
+.ace_editor .ace_gutter-active-line {
+  background-color: #272727 !important;
+}
+
+.ace_editor .ace_marker-layer .ace_selected-word {
+  border: 1px solid #49483E !important;
+}
+
+.ace_editor .ace_invisible {
+  color: #52524d !important;
+}
+
+.ace_editor .ace_entity.ace_name.ace_tag,
+.ace_editor .ace_keyword,
+.ace_editor .ace_meta.ace_tag,
+.ace_editor .ace_storage {
+  color: #F92672 !important;
+}
+
+.ace_editor .ace_punctuation,
+.ace_editor .ace_punctuation.ace_tag {
+  color: #fff !important;
+}
+
+.ace_editor .ace_constant.ace_character,
+.ace_editor .ace_constant.ace_language,
+.ace_editor .ace_constant.ace_numeric,
+.ace_editor .ace_constant.ace_other {
+  color: #AE81FF !important;
+}
+
+.ace_editor .ace_invalid {
+  color: #F8F8F0 !important;
+  background-color: #F92672 !important;
+}
+
+.ace_editor .ace_invalid.ace_deprecated {
+  color: #F8F8F0 !important;
+  background-color: #AE81FF !important;
+}
+
+.ace_editor .ace_support.ace_constant,
+.ace_editor .ace_support.ace_function {
+  color: #66D9EF !important;
+}
+
+.ace_editor .ace_fold {
+  background-color: #A6E22E !important;
+  border-color: #F8F8F2 !important;
+}
+
+.ace_editor .ace_storage.ace_type,
+.ace_editor .ace_support.ace_class,
+.ace_editor .ace_support.ace_type {
+  font-style: italic !important;
+  color: #66D9EF !important;
+}
+
+.ace_editor .ace_entity.ace_name.ace_function,
+.ace_editor .ace_entity.ace_other,
+.ace_editor .ace_entity.ace_other.ace_attribute-name,
+.ace_editor .ace_variable {
+  color: #A6E22E !important;
+}
+
+.ace_editor .ace_variable.ace_parameter {
+  font-style: italic !important;
+  color: #FD971F !important;
+}
+
+.ace_editor .ace_string {
+  color: #E6DB74 !important;
+}
+
+.ace_editor .ace_comment {
+  color: #75715E !important;
+}
+
+.ace_editor .ace_indent-guide {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAACCAYAAACZgbYnAAAAEklEQVQImWPQ0FD0ZXBzd/wPAAjVAoxeSgNeAAAAAElFTkSuQmCC) right repeat-y !important;
 }
